--- a/application/build.gradle
+++ b/application/build.gradle
@@ -18,8 +18,7 @@ repositories {
 }
 
 dependencies {
-//	implementation project(':user-service')
-
+	implementation project(':user-service')
 	implementation 'org.springframework.boot:spring-boot-starter'
 	implementation 'org.springframework.boot:spring-boot-starter-graphql'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -30,6 +29,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-logging:3.4.2'
 	implementation 'cn.dev33:sa-token-spring-boot3-starter:1.40.0'
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.2.0'
+	implementation 'org.springframework.boot:spring-boot-starter-hateoas:3.4.2'
+
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.4.2'
 	testImplementation 'junit:junit:4.13.2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
