--- a/user-service/build.gradle
+++ b/user-service/build.gradle
@@ -29,6 +29,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation:3.4.2'
 	implementation 'org.springframework.boot:spring-boot-starter-logging:3.4.2'
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.2.0'
+	implementation 'org.springframework.boot:spring-boot-starter-hateoas:3.4.2'
+
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.4.2'
 	runtimeOnly 'com.h2database:h2'
 	implementation 'org.springframework.boot:spring-boot-starter-tomcat:3.4.2'
