--- a/user-service/build.gradle
+++ b/user-service/build.gradle
@@ -39,6 +39,10 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:4.2.0'
 	implementation 'org.springframework.cloud:spring-cloud-starter:4.2.0'
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis:3.4.2'
+	implementation 'mysql:mysql-connector-java:8.0.33'
+
+	compileOnly 'org.projectlombok:lombok:1.18.30'
+	annotationProcessor 'org.projectlombok:lombok:1.18.30'
 
 	implementation 'cn.dev33:sa-token-spring-boot3-starter:1.40.0'
 
